3/custom-deployment-automation/product-level-deployment/custom-scripting-with-kustomize-and-oc-apply/nonDISdeployConfig/xyz/qa1/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: xyz
  namespace: qa1-digital
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: xyz
    weight: 100
  wildcardPolicy: None
